--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.29.0
-pandas==2.1.1
-numpy==1.24.3
-scikit-learn==1.3.0
-matplotlib==3.8.0
-seaborn==0.13.0
+streamlit
+joblib
+scikit-learn
+pandas
+numpy
